refactor: Sanitize personal details from Audit Page

--- a/The_Victoria_Audit/index.html
+++ b/The_Victoria_Audit/index.html
@@ -311,10 +311,12 @@
 
                 <h3>THE IMPOSSIBILITY
                 </h3>
-                The State alleges the Plaintiff exited his vehicle, confronted a victim, overpowered them, restrained
-                them, and returned to the driver's seat.
-                <strong>Scientific Conclusion:</strong> It is physically impossible for a human being to perform these
-                actions in 15.22 seconds.
+                The State alleges the Plaintiff performed a complex series of First Degree Felony actions within this
+                window, including exiting the vehicle, interacting with a specialized target, and returning to the
+                driver's seat.
+                <br><br>
+                <strong>Scientific Conclusion:</strong> It is physically and kinetically impossible for a human being to
+                perform these actions in 15.22 seconds.
 
                 <h3>THE GRANT FRAUD NEXUS
                 </h3>
@@ -333,11 +335,9 @@
                 1. <strong>Oct 4, 2024 (TCEQ Docket 2023-1402-PWS-E):</strong>
                 * State Regulators issue an <strong>"Agreed Order"</strong> confirming dangerous Arsenic violations in
                 Victoria County (Sector 77905).
-                * *Mandate:* Fix the water.
-
-                2. <strong>Oct 6, 2025 (48 Hours Later):</strong>
-                * Victoria County Commissioners vote to accept <strong>$741,255.24</strong> in Operation Lone Star (OLS)
-                Grant funding.
+                event of public safety; it was a <span class="text-white font-semibold">Simulacrum Event</span>
+                designed to manufacture the high-value felony metrics required for Operation Lone Star (OLS)
+                grant compliance.
                 * *Decision:* Instead of fixing the water, the County prioritized militarized police funding.
 
                 <h3>THE CURRENT CRISIS (Jan 2026)
@@ -545,8 +545,8 @@
                 You know what it's like to be "Gaslit" by the local news.
 
                 <strong>The Whistleblower is YOU.</strong>
-                Identity: [REDACTED_WHISTLEBLOWER]. In Victoria, Texas, they charged me with a Life Sentence for a
-                15-second traffic stop.
+                Identity: [REDACTED_AUDITOR]. In Victoria, Texas, they assigned a Max-Value Felony label to a
+                15-second traffic data point.
                 Why? Because they needed a "Stat" to get a $741,000 Federal Grant along the border.
                 They didn't arrest me because I'm a criminal. They arrested me because I'm a "Reimbursable Unit."
 
