fix(rpg): Cache bust main.js with version tag

--- a/rpg_experience/index.html
+++ b/rpg_experience/index.html
@@ -240,9 +240,9 @@
         <div style="position: absolute; top: 1.5rem; right: 1.5rem;">
             <a href="../index.html" class="interactive btn-exit">EXIT SIMULATION</a>
         </div>
-    </div>
+    </div> <!-- Close UI Layer -->
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/main.js?v=entropy_v1"></script>
 
     <!-- YouTube Logic -->
     <script>
