feat(rpg): Add Village System and Hunter Visuals

--- a/rpg_experience/index.html
+++ b/rpg_experience/index.html
@@ -242,7 +242,7 @@
         </div>
     </div> <!-- Close UI Layer -->
 
-    <script type="module" src="./js/main.js?v=entropy_v4"></script>
+    <script type="module" src="./js/main.js?v=hunter_v1"></script>
 
     <!-- YouTube Logic -->
     <script>
