feat(rpg): Add Monsters and Combat System

--- a/rpg_experience/index.html
+++ b/rpg_experience/index.html
@@ -215,6 +215,7 @@
                 <li><span class="text-white font-mono">[SHIFT]</span> SPRINT</li>
                 <li><span class="text-white font-mono">[E]</span> CRYO (ORDER)</li>
                 <li><span class="text-white font-mono">[R]</span> VENT (CHAOS)</li>
+                <li><span class="text-white font-mono">[V]</span> ATTACK</li>
                 <li><span class="text-white font-mono">[MOUSE]</span> LOOK</li>
             </ul>
         </div>
@@ -258,7 +259,7 @@
         </div>
     </div> <!-- Close UI Layer -->
 
-    <script type="module" src="./js/main.js?v=hunter_v2"></script>
+    <script type="module" src="./js/main.js?v=hunter_v3"></script>
 
     <!-- YouTube Logic -->
     <script>
