fix(rpg): Remove variable shadowing in init function

--- a/rpg_experience/index.html
+++ b/rpg_experience/index.html
@@ -259,7 +259,7 @@
         </div>
     </div> <!-- Close UI Layer -->
 
-    <script type="module" src="./js/main.js?v=hunter_v5_fix"></script>
+    <script type="module" src="./js/main.js?v=hunter_v6"></script>
 
     <!-- YouTube Logic -->
     <script>
