Intel Update: Protocol 004 - Administrative Exceptionalism

--- a/index.html
+++ b/index.html
@@ -539,6 +539,39 @@
 
                 </div>
             </div>
+
+            <!-- INTEL DISPATCHES -->
+            <div class="mt-8 mb-12 max-w-4xl mx-auto p-4 border border-red-900 bg-black bg-opacity-80">
+                <h3 class="text-xl text-red-500 font-mono mb-4 border-b border-red-900 pb-2">>> LATEST INTEL DISPATCHES
+                </h3>
+                <ul class="space-y-3 font-mono text-sm text-gray-300">
+                    <li>
+                        <a href="Intel/intel_administrative_exceptionalism.html"
+                            class="block hover:text-cyan-400 hover:bg-gray-900 p-2 transition-colors">
+                            <span class="text-red-500 font-bold">[NEW]</span> PROTOCOL 004: TERRORISM DESIGNATION &
+                            ADMINISTRATIVE EXCEPTIONALISM
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Intel/intel_sp_global_paradox.html"
+                            class="block hover:text-cyan-400 hover:bg-gray-900 p-2 transition-colors">
+                            PROTOCOL 003: THE S&P GLOBAL PARADOX
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Intel/intel_arsenic_wcid2.html"
+                            class="block hover:text-cyan-400 hover:bg-gray-900 p-2 transition-colors">
+                            PROTOCOL 002: ARSENIC CONTAMINATION (WCID #2)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Intel/intel_code10_blackout.html"
+                            class="block hover:text-cyan-400 hover:bg-gray-900 p-2 transition-colors">
+                            PROTOCOL 001: JANUARY 28 BLACKOUT LOGS
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div style="padding: 40px 20px; background: #000; border-top: 1px solid #333; text-align: center;">
                 <h3 class="text-2xl font-bold text-red-500 mb-8 mono">FIELD SUPPLY DIVISION</h3>
                 <p class="text-gray-400 max-w-2xl mx-auto mb-8">Official ELO2026X gear. Support the investigation.</p>
