feat: Add Spears Hearing Simulator module

--- a/The_Civil_Shield/index.html
+++ b/The_Civil_Shield/index.html
@@ -153,6 +153,22 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- Module D -->
+            <div class="feature-card glass-panel" style="border-left: 3px solid #eab308;">
+                <div class="icon-box">
+                    <i class="fa-solid fa-gavel"></i>
+                </div>
+                <h3>Spears Hearing Sim</h3>
+                <p>Gamified preparation for your Federal Rule 12 screening. Practice your oral argument against a
+                    virtual Judge.</p>
+                <div style="margin-top: 1rem;">
+                    <a href="spears_sim.html" class="btn-primary"
+                        style="width:100%; text-align:center; display:block;">Start Simulation <i
+                            class="fa-solid fa-play"></i></a>
+                </div>
+            </div>
+            </div>
         </section>
 
         <!-- MINNESOTA MIRROR ANALYSIS -->
